SSC-2212 mozaic slider, fix spacing for text

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-mozaic-slider.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-mozaic-slider.less
@@ -34,6 +34,7 @@
                 .c-mozaicslider {
                     &__title {
                         font-family: @f-theano_didot;
+                        font-size: 30px;
                     }
 
                     &__descr {
@@ -164,11 +165,24 @@
                         background-color: @white;
                         border: 1px solid @grey--c;
                         bottom: 0;
+                        padding: 12.8% 0;
                     }
 
                     .c-mozaicslider {
+                        &__title {
+                            font-size: 36px;
+                            margin-top: 0;
+                        }
+
                         &__descr {
                             margin-bottom: 27px;
+                            padding: 0 12.8%;
+                        }
+
+                        &__action {
+                            bottom: 12%;
+                            position: absolute;
+                            width: 100%;
                         }
                     }
                 }
